Changes Email into Username
